force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fileforcem1__Sharepoint_Object_Settings__mdt.object-meta.xml
<CustomObject>
    <label>SharePoint Object Settings</label>
    <pluralLabel>SharePoint Object Settings</pluralLabel>
</CustomObject>