force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Allow_initial_folder_creation__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Allow_initial_folder_creation__c</fullName>
    <defaultValue>&quot;True&quot;</defaultValue>
    <description>If true, then a record on an object can create a record-level folder in SharePoint. Disallow if a child object points to parent object&apos;s SP folder.</description>
    <inlineHelpText>If true, then a record on an object can create a record-level folder in SharePoint. Disallow if a child object points to parent object&apos;s SP folder.</inlineHelpText>
    <label>(Deprecated) Initial folder creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <default>true</default>
                <label>True</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>