force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Community_Settings__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Community_Settings__c</fullName>
    <inlineHelpText>Comma separated list of Community Specific settings. Values: (SaveLargeFiles - Save files over 11mb in Salesforce that cannot be uploaded to SharePoint.)</inlineHelpText>
    <label>Community Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>