force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Custom_Flow_Actions__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Custom_Flow_Actions__c</fullName>
    <inlineHelpText>Comma separated list of label:Flow API name. (Example: Update Type:Update_Type) This feature allows you to customize the actions menu on each file/folder.</inlineHelpText>
    <label>Custom Flow Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>