force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Disable_File_Delete__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Disable_File_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Deprecated) Disable File Deletion</label>
    <type>Checkbox</type>
</CustomField>