force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Document_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Document_Library_Id__c</fullName>
    <label>Document Library Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>