force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Folder_Custom_Field_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Folder_Custom_Field_Default_Value__c</fullName>
    <inlineHelpText>Each column must have the actual SharePoint field value and a default value separated by a colon. Salesforce merge fields should be surrounded by square brackets. Example: Cust_x0020_Col1:[Id],Another_x0020_Col2:Another Value</inlineHelpText>
    <label>Folder Custom Field Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>