force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Folder_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Folder_Name_Field__c</fullName>
    <description>The Salesforce record field which sets the folder name inside SharePoint.</description>
    <inlineHelpText>The Salesforce record field which sets the folder name inside SharePoint. For example: for Opportunity the field could be &quot;Name&quot;; or for Case the field could be &quot;CaseNumber.&quot;</inlineHelpText>
    <label>Folder Name Field</label>
    <metadataRelationshipControllingField>fileforcem1__Sharepoint_Object_Settings__mdt.fileforcem1__Salesforce_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SharePoint_Object_Settings</relationshipLabel>
    <relationshipName>SharePoint_Object_Settings2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>