force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Folder_Name_Field_Override__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Folder_Name_Field_Override__c</fullName>
    <inlineHelpText>Used to override the regular SharePoint Folder Name field for objects that are not regular Salesforce Objects such as Task.</inlineHelpText>
    <label>Folder Name Field Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>