force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Initial_Folder_Structure__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Initial_Folder_Structure__c</fullName>
    <description>The folders that will be created on new record. Must be in JSON format.</description>
    <label>Initial Folder Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>