force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Named_Credential__c</fullName>
    <label>Named Credential Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>