force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Permissions__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Permissions__c</fullName>
    <inlineHelpText>Comma separated list of allowed permissions. Values: (CreateFolders, RenameFolders, DeleteFolders, DownloadFiles, UploadFiles, RenameFiles, DeleteFiles, SetupRecord, SetupSubfolders, ShowRootCrumb, OpenSharePoint, AutoSetup, SyncOneDrive, SiteSelect)</inlineHelpText>
    <label>Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>