force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Root_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Root_Folder_Id__c</fullName>
    <label>Root Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>