force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Run_Custom_Security_Per_Line__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Run_Custom_Security_Per_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run CustomSecurity Per Line</label>
    <type>Checkbox</type>
</CustomField>