force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Sharepoint_Object_Settings</relationshipLabel>
    <relationshipName>Sharepoint_Object_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>