force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Salesforce_Object_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Salesforce_Object_Id_Field__c</fullName>
    <description>Custom Column in Sharepoint Document Library that contains a Salesforce Object Id</description>
    <inlineHelpText>If a value is provided, security will enforce that a user can only see a SharePoint file or folder if they have access to the related record in salesforce.</inlineHelpText>
    <label>Salesforce Object Id Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>