force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Security_Method_Field__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Security_Method_Field__c</fullName>
    <description>Custom Column in Sharepoint Document Library that contains a List of custom Methods to validate access to a file</description>
    <inlineHelpText>If a value is provided, security will enforce that a user can only see a SharePoint file or folder if the Salesforce User Session passes the custom validation class.</inlineHelpText>
    <label>Security Method Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>