force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__SharePoint_Custom_Columns__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__SharePoint_Custom_Columns__c</fullName>
    <inlineHelpText>Comma separated list of custom SharePoint columns to display in addition to the default columns. Each column must have a label and the actual SharePoint field value separated by a colon. Example: Cust Col1:Cust_x0020_Col1,Another Column:Another_x0020_Col2</inlineHelpText>
    <label>SharePoint Custom Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>