force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Sharepoint_Folder_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Sharepoint_Folder_Id_Field__c</fullName>
    <label>SharePoint Folder Id Field</label>
    <metadataRelationshipControllingField>fileforcem1__Sharepoint_Object_Settings__mdt.fileforcem1__Salesforce_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sharepoint_Object_Settings</relationshipLabel>
    <relationshipName>Sharepoint_Object_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>