force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__SharePoint_Folder_Id_Override__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__SharePoint_Folder_Id_Override__c</fullName>
    <inlineHelpText>Used to override the regular SharePoint Folder Id field for objects that are not regular Salesforce Objects such as Task.</inlineHelpText>
    <label>SharePoint Folder Id Field Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>