force-app/main/default/objects/fileforcem1__Sharepoint_Object_Settings__mdt/fields/fileforcem1__Upload_Url_Parameters__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Upload_Url_Parameters__c</fullName>
    <inlineHelpText>If you need to set custom fields or parameters by appending to the SharePoint uploader&apos;s Upload.aspx url, enter it here. To merge Salesforce fields on the record, enter it within brackets &quot;[]&quot;. For example, CaseNo=[CaseNumber].</inlineHelpText>
    <label>File Upload Url Custom Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>